Fix content grid controls having double spacing when search filters are hidden by replacing controls spacing with padding which is adjusted during the filters hide/show animation

--- a/src/main/resources/CSS/styles.css
+++ b/src/main/resources/CSS/styles.css
@@ -54,7 +54,7 @@
 .content-pane-controls {
     -fx-background-color: -content-color;
     -fx-padding: 20px;
-    -fx-spacing: 15px;
+    /* -fx-spacing: 15px; */
     -fx-alignment: center;
 }
 
